--- a/Presentacion.html
+++ b/Presentacion.html
@@ -3,10 +3,10 @@
     <head>
         <title>Presentación</title>
     </head>
-    <body>
+    <body style="background-color:#BCCEA3; color:rgb(18, 61, 16);">
         <div>
             <h3> Información personal</h3>
-        <p>Me llamo Gabriel Martín Garrido, tengo 21 años y soy de Sevilla. Me considero una persona tranquila y seria.</p>
+        <p >Me llamo Gabriel Martín Garrido, tengo 21 años y soy de Sevilla. Me considero una persona tranquila y seria.</p>
         <img src="Espaguetis-a-la-boloñesa.jpg" alt="" width="400" height="250">
         </div>
         <div>
